# Forex-Calculator

./: CHANGELOG.md  CMakeLists.txt  README.md  utils.h
.github/workflows/: cmake-multi-platform.yml
src/: about.cpp  about.h  about.ui  breakevencalculator.cpp  breakevencalculator.h  breakevencalculator.ui  compoundinterestcalculator.cpp  compoundinterestcalculator.h  compoundinterestcalculator.ui  currencyconverter.cpp  currencyconverter.h  currencyconverter.ui  fibonaccicalculator.cpp  fibonaccicalculator.h  fibonaccicalculator.ui  lotsizecalculator.cpp  lotsizecalculator.h  lotsizecalculator.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  margin_calculator.ui  margincalculator.cpp  margincalculator.h  margincalculator.ui  pip_calculator.ui  pipcalculator.cpp  pipcalculator.h  pipcalculator.ui  positionsizecalculator.cpp  positionsizecalculator.h  positionsizecalculator.ui  profitandlosscalculator.cpp  profitandlosscalculator.h  profitandlosscalculator.ui  risk_management_calculator.ui  riskmanagementcalculator.cpp  riskmanagementcalculator.h  riskmanagementcalculator.ui  (+12 more)
translations/: Forex-Calculator_am.qm  Forex-Calculator_am.ts  Forex-Calculator_ar.qm  Forex-Calculator_ar.ts  Forex-Calculator_bn.qm  Forex-Calculator_bn.ts  Forex-Calculator_de.qm  Forex-Calculator_de.ts  Forex-Calculator_en.ts  Forex-Calculator_es.qm  Forex-Calculator_es.ts  Forex-Calculator_fa.qm  Forex-Calculator_fa.ts  Forex-Calculator_fr.qm  Forex-Calculator_fr.ts  Forex-Calculator_gn.qm  Forex-Calculator_gn.ts  Forex-Calculator_ha.qm  Forex-Calculator_ha.ts  Forex-Calculator_he.qm  Forex-Calculator_he.ts  Forex-Calculator_hi.qm  Forex-Calculator_hi.ts  Forex-Calculator_ht.qm  Forex-Calculator_ht.ts  Forex-Calculator_it.qm  Forex-Calculator_it.ts  Forex-Calculator_ja.qm  Forex-Calculator_ja.ts  Forex-Calculator_ko.qm  Forex-Calculator_ko.ts  Forex-Calculator_nah.qm  Forex-Calculator_nah.ts  Forex-Calculator_ps.qm  Forex-Calculator_ps.ts  Forex-Calculator_pt.qm  Forex-Calculator_pt.ts  Forex-Calculator_ru.qm  Forex-Calculator_ru.ts  Forex-Calculator_sw.qm  (+16 more)
